test-suite/tests/ui/designated/missing_designated_argument_no_arguments.stderr
error: an argument must match the designated parameter
 --> tests/ui/designated/missing_designated_argument_no_arguments.rs:8:23
  |
8 | impl<#[stated] S> Test<> {
  |                       ^
